--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
+    "node-thermal-printer": "^4.4.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.13.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
