--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
     "node-thermal-printer": "^4.4.3",
+    "pdfkit": "^0.16.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
+    "@types/pdfkit": "^0.13.9",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
