--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "node-thermal-printer": "^4.4.3",
     "pdfkit": "^0.16.0",
+    "serialport": "^13.0.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
