--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "node-thermal-printer": "^4.4.3",
     "pdfkit": "^0.16.0",
+    "qrcode": "^1.5.4",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/pdfkit": "^0.13.9",
+    "@types/qrcode": "^1.5.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
