added printer configurations kot, addons

--- a/printer-config.json
+++ b/printer-config.json
@@ -1,9 +1,10 @@
 {
   "kitchens": {
-    "67af4fce36fc05c402c3be08": "192.168.1.1",
-    "67af562e36fc05c402c3beba": "192.168.1.1",
-    "67af56d936fc05c402c3becb": "192.168.1.1",
-    "686d40fe1ce963511b0eb095": "192.168.1.1"
+    "67af4fce36fc05c402c3be08": "127.0.0.1:9100",
+    "67af562e36fc05c402c3beba": "127.0.0.1:9100",
+    "67af56d936fc05c402c3becb": "127.0.0.1:9100",
+    "686d40fe1ce963511b0eb095": "127.0.0.1:9100"
   },
-  "billing": "192.168.1.1"
+  "billing": "127.0.0.1:9100",
+  "token": "127.0.0.1:9100"
 }
