--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "canvas": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "escpos": "^3.0.0-alpha.6",
